Fixed: Contact alignment in 800px and 500px max-width.

--- a/css/index.css
+++ b/css/index.css
@@ -329,6 +329,16 @@ ul {
         width: 100%;
         flex-wrap: wrap;
     }
+    /*header nav a{
+        width: 100%;
+        margin-left: 10%;
+    }*/
+    body {
+        width: 100%;
+    }
+    .contact {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 500px){
@@ -424,6 +434,9 @@ ul {
         width: 100%;
     }
     .main-content .top-content .text-content{
+        width: 100%;
+    }
+    .contact {
         width: 100%;
     }
 }
